# Biomed

./: .gitignore  Dockerfile  Makefile  README.md  Untitled-1.html  entrypoint.sh  main.py  pyproject.toml
colabs/: ENVIRONMENT.md  biomedparse_inference_demo.py  environment.yml  requirements-colab-pip-freeze.txt
configs/: biomedparse_inference.yaml
inference_utils/: inference.py  model.py  model_mock.py  output_processing.py  processing_utils.py  target_dist.py
modeling/: BaseModel.py  __init__.py
modeling/architectures/: __init__.py  build.py  seem_model_demo.py  seem_model_v0.py  seem_model_v1.py  xdecoder_model.py
modeling/body/: __init__.py  build.py  xdecoder_head.py
modeling/interface/: __init__.py  build.py  modules.py  seem_demo.py  seem_v0.py  seem_v1.py  xdecoder.py
modeling/interface/prototype/: attention_data_struct_seemdemo.py  attention_data_struct_seemv0.py  attention_data_struct_seemv1.py
modeling/language/: __init__.py  build.py  loss.py  misc.py  vlpencoder.py
modeling/language/LangEncoder/: __init__.py  build.py  transformer.py
modeling/modules/: __init__.py  attention.py  criterion.py  matcher.py  point_features.py  position_encoding.py  postprocessing.py
modeling/utils/: __init__.py  attention.py  box_ops.py  config.py  interactive.py  misc.py
modeling/vision/backbone/: __init__.py  backbone.py  build.py  common.py  davit.py  focal.py  (+2 more)
test_inference_utils/: test_target_dist.py
utilities/: Config.py  __init__.py  arguments.py  constants.py  dataset.py  distributed.py  misc.py  model.py  prompt_engineering.py  visualizer.py
(+11 files in other folders)
